commied changes to Sass Js

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         />
         <link rel="stylesheet" href="dist/css/main.css" />
         <title>Insert Title Here</title>
+
+
+  <script>const mode = getComputedStyle(document.documentElement).getPropertyValue('content');
+  </script>
     </head>
     <body>
         <section class="calculator">
