--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="default">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -29,7 +29,7 @@
                     <div id="color-theme3"class="theme-number">3</div>
                   </div>
                 <section class="toggle-window">
-                  <button aria-label="default theme" id="default" class="theme" ></button>
+                  <button aria-label="default theme" id="default" class="theme active" ></button>
                   <button aria-label="light theme"id="light" class="theme" ></button>
                   <button aria-label="dark theme" id="dark" class="theme" ></button>
                 </section>
